<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:background="@drawable/a1"
	android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/set_linearlayout2"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
		android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/url"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/inputUrl"
			android:typeface="sans" android:textStyle="bold"
			android:textSize="18dp" android:textColor="@color/black">
		</TextView>
		<EditText android:id="@+id/url_edit"
			android:layout_width="310dp" android:layout_height="wrap_content"
			android:inputType="textUri"
			android:textSize="15dp">
		</EditText>
		<TextView android:id="@+id/example"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/example"
			android:typeface="sans" android:textStyle="bold"
			android:textSize="15dp" android:textColor="@color/black">
		</TextView>
		<Button android:id="@+id/sumbitBtn" android:layout_width="80dp"
		    android:layout_marginTop="15dp" android:layout_gravity="center_horizontal"
			android:layout_height="50dp" android:text="完成" android:textSize="18dp" 
			 android:typeface="normal"
	         android:textStyle="bold"></Button>
	</LinearLayout>
	
	<LinearLayout android:id="@+id/tooltipLinear" 
	               android:orientation="vertical"
	               android:layout_marginLeft="20dp"
	               android:layout_marginRight="20dp"
	               android:layout_marginTop="20dp"
	               android:layout_alignParentBottom="true"
	               android:gravity="bottom"
	               android:layout_marginBottom="20dp"
	               android:layout_below="@+id/set_linearlayout2"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content">
	      <TextView  android:layout_width="wrap_content"
	                 android:text="友情提示"
	                  android:textColor="@color/red"
	               android:textSize="15dp"
	               android:typeface="normal"
	               android:textStyle="bold"
	                 android:layout_height="wrap_content"></TextView> 
	      <TextView  android:layout_width="wrap_content"
	                 android:text="@string/goodfellowship"
	                  android:textColor="@color/red"
	                  android:textSize="15dp"
	                  android:typeface="normal"
	                 android:textStyle="bold"
	                 android:singleLine="false"
	                 android:layout_height="wrap_content">
	          </TextView>  
	        <TextView  android:layout_width="wrap_content"
	                 android:text="@string/goodfellowshipTwo"
	                  android:textColor="@color/red"
	                  android:textSize="15dp"
	                  android:typeface="normal"
	                 android:textStyle="bold"
	                 android:singleLine="false"
	                 android:layout_height="wrap_content">
	          </TextView>  
	        <TextView  android:layout_width="wrap_content"
	                 android:text="@string/goodfellowshipThree"
	                  android:textColor="@color/red"
	                  android:textSize="15dp"
	                  android:typeface="normal"
	                 android:textStyle="bold"
	                 android:singleLine="false"
	                 android:layout_height="wrap_content">
	          </TextView>     
	</LinearLayout>              
</RelativeLayout>
